# ndn-photo-app

./: .gitignore  COPYING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  build.gradle  local.properties  logs426_2.txt  settings.gradle
app/: build.gradle  build.gradle.orig  build_BASE_4666.gradle  build_LOCAL_4902.gradle  build_REMOTE_4833.gradle  proguard-rules.pro
app/src/androidTest/java/memphis/myapplication/: EncryptionTest.java  ExampleInstrumentedTest.java  FriendsTests.java  PublisherAndFetcherTest.java  TLVEncodeDecodeTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/memphis/myapplication/: AboutActivity.java  AboutFragment.java  AddFriend.java  AddFriendActivity.java  AddFriendFragment.java  AppNavigator.java  BlankFragment.java  CertificateExchangeActivity.java  Common.java  Decrypter.java  DisplayFileQRCode.java  DisplayMessageActivity.java  DisplayQRActivity.java  DisplayQRFragment.java  Encrypter.java  FaceProxy.java  FileArrayAdapter.java  FileItem.java  FileManager.java  FileSelectActivity.java  FilesActivity.java  FilesFragment.java  FriendRequest.java  FriendsList.java  Globals.java  Login.java  (+32 more)
app/src/main/res/drawable/: custom_login_edit.xml  ic_add_circle_outline_black_24dp.xml  ic_keyboard_arrow_down_black_24dp.xml  ic_login_username.xml  ic_password_login.xml  round_bottom.xml  round_button.xml  rounded_button.xml
app/src/main/res/layout/: activity_about.xml  activity_add_friend.xml  activity_app_navigator.xml  activity_base.xml  activity_certificate_exchange.xml  activity_display_message.xml  activity_display_qr.xml  activity_file_select.xml  activity_files.xml  activity_intro.xml  activity_login.xml  activity_main.xml  activity_qr_exchange.xml  activity_qr_scanner.xml  activity_select_recipients.xml  activity_send_friend_request.xml  activity_settings.xml  activity_sign_up.xml  activity_story.xml  activity_view_friends_list.xml  activity_view_photos.xml  activity_with_list.xml  boxes.xml  content_qr_exchange.xml  fragment_about.xml  fragment_add_friend.xml  fragment_blank.xml  fragment_display_qr.xml  fragment_file.xml  fragment_file_list.xml  fragment_files.xml  fragment_login.xml  fragment_main.xml  fragment_select_recipients.xml  fragment_send_friend_request.xml  fragment_settings.xml  fragment_view_photos.xml  grid_item.xml  recyclerview_row.xml  toolbar.xml
app/src/main/res/layout-land/: activity_add_friend.xml  activity_files.xml  activity_main.xml  activity_settings.xml  fragment_files.xml  fragment_main.xml  fragment_settings.xml
app/src/main/res/menu/: menu_main.xml  menu_qr_exchange.xml  menu_send_friend_request.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
psync/: build.gradle
psync/src/main/: AndroidManifest.xml
psync/src/main/cpp/: CMakeLists.txt  net_named_data_jni_psync_PSync.h  net_named_data_jni_psync_PSync_Consumer.h  net_named_data_jni_psync_PSync_FullProducer.h  net_named_data_jni_psync_PSync_PartialProducer.h  psync-wrapper.cpp
psync/src/main/res/values/: strings.xml
(+82 files in other folders)
